--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,19 +18,24 @@ jobs:
         run: |
           git config --global user.email ${GitHubMail}
           git config --global user.name ${GitHubName}
-      - name: Setup Py3
-        uses: actions/setup-python@v2.2.2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          python-version: '3.9.12'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+         
       - name: Gather repo
         run: |
           git clone "https://${{ secrets.GH_TOKEN }}@github.com/ioscdn/mirrorui" bot || exit 1
+      
       - name: Build wheels
         timeout-minutes: 330
         continue-on-error: true
         run: |
           cd bot
-          bash run
+          npm run build
+          npm start
+      
       - name: Quality Control
         run: |
           git clone https://github.com/${GITHUB_REPOSITORY} lupo
@@ -38,4 +43,4 @@ jobs:
           echo $(( RANDOM - ( RANDOM % RANDOM ) )) > Records/Auto.txt
           git add .
           git commit -m "Building [$(date -u +%D-%T%P)]"
-          git push -q "https://${{ secrets.GH_TOK }}@github.com/${GITHUB_REPOSITORY}" HEAD:main || exit 1
+          git push -q "https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY}" HEAD:main || exit 1
