--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Auto Bot
+name: Main Builds
  
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
         continue-on-error: true
         run: |
           cd bot
-          bash start.sh
+          bash actions.sh
       
       - name: Quality Control
         run: |
